# fks-spawner

./: .dockerignore  .gitignore  README.md
.github/workflows/: rust.yml
bots/crypto-demo/: Cargo.toml  Dockerfile  README.md
bots/crypto-demo/src/: brain.rs  exchange.rs  janus_brain.rs  main.rs  metrics.rs  mock_exchange.rs  paper.rs  source.rs
bots/fks-bot-example/: Cargo.toml  Dockerfile  README.md
bots/fks-bot-example/src/: brain.rs  main.rs  server.rs  ticker.rs
bots/rustrade-exchange-apiws/: Cargo.toml  README.md
bots/rustrade-exchange-apiws/src/: candles.rs  fills.rs  kraken.rs  lib.rs  recovery.rs  routing.rs
bots/rustrade-exchange-apiws/tests/: ambiguous_fill_recovery.rs  gate_proof.rs
bots/spot-portfolio/: Cargo.toml  Dockerfile  README.md  SPOT.md  spot-portfolio.example.toml
bots/spot-portfolio/src/: lib.rs
bots/spot-portfolio/src/spot/: backtest.rs  config.rs  cryptocom.rs  exchange.rs  kraken.rs  kucoin.rs  mod.rs  portfolio.rs  rebalance.rs  signals.rs
crates/crypto-bot-core/: Cargo.toml
crates/crypto-bot-core/src/: alerts.rs  events.rs  journal.rs  lib.rs  status.rs
crates/spawner/: CLAUDE.md  Cargo.toml  README.md  TODO.md
crates/spawner/src/: api.rs  auth.rs  btc_watch.rs  config.rs  db.rs  docker_client.rs  edge_decay.rs  edges.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  net_worth.rs  notifications.rs  prometheus_sd.rs  rithmic_sampler.rs  secrets_crypto.rs  supervisor.rs  task_supervisor.rs  treasury.rs
crates/spawner/tests/: db_integration.rs  integration.rs
crates/spawner/tests/fixtures/: schema.sql
