# =============================================================================
# fks-bot-example — reference bot for the FKS spawner
# =============================================================================
# A standalone bot crate that consumes the PUBLISHED rustrade framework from
# crates.io — the canonical example of how a `bots/*` (or private `strategies/*`)
# crate depends on the split-out libraries. Production bots swap `HeartbeatBrain`
# for real strategy logic and add `indicators-ta` / `exchange-apiws`.
#
# Build (from this directory, or via infrastructure/docker/services/fks-bot-example):
#   cargo build --release
# =============================================================================

[package]
name        = "fks-bot-example"
version     = "0.1.0"
edition     = "2024"
publish     = false
description = "Reference bot image for the FKS spawner — heartbeat + Prometheus metrics matching the fks_bot_* contract"

[[bin]]
name = "fks-bot-example"
path = "src/main.rs"

[dependencies]
# Framework — the facade publishes as `rustrade-framework` (the bare `rustrade`
# name is taken on crates.io) but is imported as `rustrade`.
rustrade = { package = "rustrade-framework", version = "0.2" }

# Async runtime / utilities
async-trait  = "0.1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util   = { version = "0.7", features = ["rt"] }
futures-util = "0.3"

# HTTP server for /metrics
axum = "0.8"

# Prometheus metrics
prometheus = "0.14"
once_cell  = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rand       = "0.10"

# Detach from the fks root virtual workspace — this crate is standalone and
# resolves its own deps from crates.io (mirrors how a real bot repo would).
[workspace]
