# ============================================================================
# spot-portfolio — multi-exchange spot rebalancing bot (NOT an edge)
# ============================================================================
# Standalone bot crate, split out of the `crypto` repo's `src/spot/*` + its two
# binaries. Mirrors the layout of `bots/fks-bot-example` and `bots/crypto-demo`:
# its own [workspace] + Cargo.lock so it resolves its own dep universe and builds
# anywhere.
#
#   spot-portfolio  (src/bin/spot_portfolio.rs) — the live rebalancer
#   spot-optimize   (src/bin/spot_optimize.rs)  — read-only tuning sweep
#
# The generic bot scaffolding (Discord alerts, JSONL journal, FKS status server)
# is shared with the futures/funding edges via `crypto-bot-core`, taken as a PATH
# dependency for now (local buildability; git-rev pinning is a later step). The
# first-party exchange crate is pinned by GIT exactly as the `crypto` repo did.
# ============================================================================
[workspace]

[package]
name         = "spot-portfolio"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.94.1"
license      = "MIT"
description  = "Multi-exchange spot portfolio bot: %-target baskets + cash reserve, rebalanced on drift across Kraken / Crypto.com / …"
publish      = false

[[bin]]
name = "spot-portfolio"
path = "src/bin/spot_portfolio.rs"

# Read-only tuning sweep: grid-search band/reserve/cooldown against real Kraken
# daily OHLC via the pure spot backtest. No credentials.
[[bin]]
name = "spot-optimize"
path = "src/bin/spot_optimize.rs"

[dependencies]
# Shared, edge-free bot scaffolding (alerts / journal / status). PATH dep for
# local buildability; a git-rev pin comes in a later migration step.
crypto-bot-core = { path = "../../crates/crypto-bot-core" }

# KuCoin (always on) + Kraken + Crypto.com spot connectors. Pinned to the same
# git rev the `crypto` repo used; cargo unifies this onto the one exchange-apiws
# copy crypto-bot-core also pulls.
exchange-apiws = { git = "https://github.com/nuniesmith/exchange-apiws", rev = "fa35543", default-features = false, features = ["kraken", "cryptocom"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# Loads ./.env into the process environment at startup.
dotenvy = "0.15"
serde_json = "1"

# TOML config + a normalized async SpotExchange trait.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"

# janus AI signal bridge (src/spot/signals.rs): reads janus's per-symbol Redis
# signals to optionally TILT the spot targets. Read-only; no TLS (localhost).
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }

[profile.release]
opt-level = 3
lto = "thin"
