# ============================================================================
# spawner — nested workspace (own dep universe, independent of fks root)
#
# This crate is heading for its own repo (see SPLIT_PLAN.md). The empty
# [workspace] block keeps cargo from auto-attaching it to the parent
# fks workspace, so `cargo check -p spawner` works both here and
# from inside the eventual standalone repo without any reshuffling.
#
# Deps are pinned to explicit versions (rather than `workspace = true`)
# for the same reason — once this crate is in its own repo, there's no
# parent `[workspace.dependencies]` to inherit from.
# ============================================================================
[workspace]

[package]
name = "spawner"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "FKS Bot Spawner — Docker container lifecycle manager for isolated bot workloads"

[[bin]]
name = "spawner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-stream = "0.3"
async-trait  = "0.1"

# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }

# Docker SDK
bollard = "0.19"

# Serialisation
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
prometheus         = "0.14"

# Error handling
anyhow    = "1.0"
thiserror = "2.0"

# Utilities
uuid       = { version = "1.19", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
once_cell  = "1"

# Database — optional, gated behind the `db` feature.
# When the feature is off the spawner runs in stateless mode (no Postgres).
sqlx = { version = "0.8", default-features = false, optional = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
] }

# exchange_secrets encryption-at-rest (pure-Rust AEAD) — db-only.
chacha20poly1305 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# Outbound HTTP for the notification sender (Discord webhooks) — db-only.
# rustls (no OpenSSL) to keep the container image dependency-light and match
# sqlx's runtime-tokio-rustls stack.
reqwest = { version = "0.12", default-features = false, optional = true, features = [
    "json",
    "rustls-tls",
] }

[features]
default = ["db"]
# Enables Postgres persistence of spawn/stop events into bot_runs, plus the
# notification sender (needs the channel store + webhook HTTP client).
db = ["dep:sqlx", "dep:chacha20poly1305", "dep:base64", "dep:hex", "dep:reqwest"]

[dev-dependencies]
tokio        = { version = "1.48", features = ["macros", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1"
tower        = { version = "0.5", features = ["util"] }
async-trait  = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
serde_json  = "1.0"
